# Completion

./: .gitignore  .gitmodules  Makefile  PROGRESS  README  RECOVERY
doc/: README  notes
junk/: git.request  pokus.cpp
large-data/: .gitignore  configure.py  fykos.sh
sample-data/: Makefile  kaktus.txt  povidky.arpa  povidky.txt  snoubenci.txt  wiki.ces.abbr  wiki.en.abbr
src/: .gitignore  Makefile  a.stats  demo.py  makestats.py  origin.py  self-eval.py  setup.py  test.py  ui-demo.py  ui.py  ui2.py
src/sip/kenlm-bindings/: configure.py  kenlm-bindings.sip  pyproject.toml
src/sip/selector-bindings/: configure.py  pyproject.toml  selector-bindings.sip  selector.sip
tests/: .gitignore  Makefile  cache100.ini  cache200.ini  cache50.ini  cached_model_0100.result  cached_model_0200.result  cached_model_050.result  cached_model_n100.result  cached_model_n200.result  cached_model_n50.result  domain_adaptation_cache.result  domain_adaptation_data.result  domain_adaptation_no.result  en.ini  kopete2text.sh  lmconfig.ini  minimalDifference0.ini  minimalDifference1.ini  minimalDifference2.ini  minimal_difference_0.result  minimal_difference_1.result  minimal_difference_2.result  model_order_1.result  model_order_3.result  prefixConditionNo.ini  prefixConditionYes.ini  prefix_condition_no.result  prefix_condition_yes.result  selector1000.ini  selector10000.ini  selector3000.ini  selector_limit_1000.result  selector_limit_10000.result  selector_limit_3000.result  slovane.txt  smoothing_method_gt.result  smoothing_method_kn.result  smoothing_method_kni.result  (+22 more)
(+132 files in other folders)
