# Specify sip v6 as the build system for the package.
[build-system]
requires = ["sip >=6, <7"]
build-backend = "sipbuild.api"

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = "kenlm"

[tool.sip.bindings.kenlm]
include-dirs = ["../../cpp/kenlm-wrapper", "../../../libs/kenlm"]
define-macros = ["KENLM_MAX_ORDER=6"]
